Vagrantfile: Adjust to install eas 3

--- a/bootstrap-python.yml
+++ b/bootstrap-python.yml
@@ -4,3 +4,4 @@
   tasks:
   - name: install python 2
     raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
+    become: yes
