--- a/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
@@ -7,10 +7,16 @@ server {
     listen 80;
     server_name {% for item in FQDN %} beta-dev.{{ item }} {% endfor %};
 
+    root {{ echaloasuerte_3_html }};
+
     location = /favicon.ico { access_log off; log_not_found off; }
 
-    location / {
+    location /api {
         include         uwsgi_params;
         uwsgi_pass      backend-{{ echaloasuerte_3_app_name }};
+    }
+
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 }
