--- a/config-eas3.yml
+++ b/config-eas3.yml
@@ -1,4 +1,7 @@
 - hosts: ECHALOASUERTE
   remote_user: root
+  vars:
+    nodejs_version: "8.x"
   roles:
+  - { role: geerlingguy.nodejs, become: yes  }
   - echaloasuerte-3
