--- a/roles/echaloasuerte/tasks/main.yml
+++ b/roles/echaloasuerte/tasks/main.yml
@@ -144,5 +144,5 @@
   shell: 'curl -X DELETE "https://api.cloudflare.com/client/v4/zones/{{item}}/purge_cache" -H "X-Auth-Email: mariocj89@gmail.com" -H "X-Auth-Key: {{cloudflare_api_token}}" --data "{\"purge_everything\":true}" -H "Content-Type: application/json"'
   with_items:
     - "{{cloudflare_echaloasuerte_id}}"
-    - "{{cloudflare_pickforme_id}}"
+    - "{{cloudflare_woreep_id}}"
     - "{{cloudflare_chooserandom_id}}"
