--- a/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
@@ -5,7 +5,7 @@ upstream backend-{{ echaloasuerte_3_app_name }}  {
 
 server {
     listen 80;
-    server_name {% for item in FQDN %} beta-dev.{{ item }} {% endfor %};
+    server_name {% for item in echaloasuerte_3_domains %} {{ item }} {% endfor %};
 
     root {{ echaloasuerte_3_html }};
 
