--- a/roles/echaloasuerte-3/defaults/main.yml
+++ b/roles/echaloasuerte-3/defaults/main.yml
@@ -18,6 +18,9 @@ echaloasuerte_3_app_wsgi: "eas/wsgi.py"
 # Version to deploy
 echaloasuerte_3_git_branch: "master"
 
+# NPM build config to use
+echaloasuerte_3_npm_config: ":dev"
+
 echaloasuerte_3_domains:
   - "woreep.com"
   - "beta.echaloasuerte.com"
