--- a/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
@@ -17,6 +17,13 @@ server {
     }
 
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri @node;
+    }
+
+    location @node {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_pass http://[::1]:8080;
     }
 }
