--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -29,6 +29,15 @@ server {
         try_files $uri @node;
     }
 
+    location /groups/ {
+        try_files $uri @node;
+    }
+
+    location /api {
+        include         uwsgi_params;
+        uwsgi_pass      backend-echaloasuerte-3;
+    }
+
     location @node {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
