--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -7,37 +7,14 @@ server {
     listen 80;
     server_name {% for item in FQDN %} {{ item }} dev.{{ item }} www.{{ item }}{% endfor %};
 
+    location = /favicon.ico { access_log off; log_not_found off; }
     location /static/ {
-        root      {{ echaloasuerte_root }};
-        try_files $uri @node;
+        alias {{ echaloasuerte_static }}/;
         expires 365d;
-    }
-
-    location /favicon.ico {
-        try_files $uri @node;
-        expires 365d;
-        access_log off;
-        log_not_found off;
     }
 
     location / {
         include         uwsgi_params;
         uwsgi_pass      backend;
-    }
-
-    location /groups/ {
-        try_files $uri @node;
-    }
-
-    location /api {
-        include         uwsgi_params;
-        uwsgi_pass      backend-echaloasuerte-3;
-    }
-
-    location @node {
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-        proxy_redirect off;
-        proxy_pass http://[::1]:8080;
     }
 }
