AB testing depending on arg token

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -3,6 +3,28 @@ upstream backend  {
 {% endfor %}
 }
 
+upstream old-backend-frontend {
+  server localhost:8080;
+}
+
+upstream new-frontend {
+  server localhost:8081;
+}
+
+split_clients "${arg_token}" $appversion {
+    95%     old-backend-frontend;
+    *       new-frontend;
+}
+
+server {
+    listen localhost:8080;
+
+    location / {
+        include         uwsgi_params;
+        uwsgi_pass      backend;
+    }
+}
+
 server {
     listen 80;
     server_name {% for item in FQDN %} {{ item }} dev.{{ item }} www.{{ item }}{% endfor %};
@@ -21,17 +43,18 @@ server {
     }
 
     location / {
-        include         uwsgi_params;
-        uwsgi_pass      backend;
+        proxy_set_header Host $http_host;
+        proxy_pass http://old-backend-frontend;
     }
 
     location /api/v1/ {
-        include         uwsgi_params;
-        uwsgi_pass      backend;
+        proxy_set_header Host $http_host;
+        proxy_pass http://old-backend-frontend;
     }
 
     location /draw/new/groups/ {
-        try_files $uri @node;
+        proxy_set_header Host $host;
+        proxy_pass http://$appversion;
     }
 
     location /groups/ {
@@ -44,9 +67,7 @@ server {
     }
 
     location @node {
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
-        proxy_redirect off;
-        proxy_pass http://[::1]:8081;
+        proxy_pass http://new-frontend;
     }
 }
