--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -25,6 +25,13 @@ server {
     }
 }
 
+
+map $cookie_split_test_version $upstream_group {
+    default $appversion;
+    "old-backend-frontend" "old-backend-frontend";
+    "new-frontend" "new-frontend";
+}
+
 server {
     listen 80;
     server_name {% for item in FQDN %} {{ item }} dev.{{ item }} www.{{ item }}{% endfor %};
@@ -53,7 +60,17 @@ server {
     }
 
     location /draw/new/groups/ {
+        add_header Set-Cookie "split_test_version=$upstream_group;Path=/;Max-Age=518400;";
         proxy_set_header Host $host;
+
+        if ($upstream_group = "old-backend-frontend") {
+            proxy_pass http://old-backend-frontend;
+            break;
+        }
+        if ($upstream_group = "new-frontend") {
+            proxy_pass http://new-frontend;
+            break;
+        }
         proxy_pass http://$appversion;
     }
 
