AB testing: decide using remote_addr, agent, and date
Also move to 1% the test group

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -11,8 +11,8 @@ upstream new-frontend {
   server localhost:8081;
 }
 
-split_clients "${arg_token}" $appversion {
-    95%     old-backend-frontend;
+split_clients app"${remote_addr}${http_user_agent}${date_gmt}" $appversion {
+    99%     old-backend-frontend;
     *       new-frontend;
 }
 
