--- a/roles/echaloasuerte-3/tasks/main.yml
+++ b/roles/echaloasuerte-3/tasks/main.yml
@@ -102,13 +102,22 @@
     - "127.0.0.1:8081:80"
   become: yes
 
-- name: Docker prune everything
-  docker_prune:
-    containers: yes
-    images: yes
-    networks: yes
-    volumes: yes
-    builder_cache: yes
+# Reenable once ansible 2.8 is out
+#- name: Docker prune everything
+#  docker_prune:
+#    containers: yes
+#    images: yes
+#    networks: yes
+#    volumes: yes
+#    builder_cache: yes
+
+- name: Prune docker images
+  command: docker image prune
+  become: yes
+
+- name: Prune stopped containers
+  command: docker container prune
+  become: yes
 
 - name: Fix owners of echaloasuerte application tree
   file:
