Make eas2 deploy from prod branch in production
This way, we will always control what version is being
deployed in production.

--- a/roles/echaloasuerte/tasks/main.yml
+++ b/roles/echaloasuerte/tasks/main.yml
@@ -26,6 +26,7 @@
     repo: git://github.com/etcaterva/EchaloASuerte.git
     dest: "{{ echaloasuerte_app }}"
     update: yes
+    version: "{{ echaloasuerte_git_branch }}"
     accept_hostkey: yes
     force: yes
   become: yes
