Redirect /privacy-policy to eas3

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -78,6 +78,10 @@ server {
         try_files $uri @node;
     }
 
+    location /privacy-policy {
+        try_files $uri @node;
+    }
+
     location /api {
         include         uwsgi_params;
         uwsgi_pass      backend-echaloasuerte-3;
