Route /draw/new/groups to new-frontend

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -60,18 +60,8 @@ server {
     }
 
     location /draw/new/groups/ {
-        add_header Set-Cookie "split_test_version=$upstream_group;Path=/;Max-Age=518400;";
-        proxy_set_header Host $host;
-
-        if ($upstream_group = "old-backend-frontend") {
-            proxy_pass http://old-backend-frontend;
-            break;
-        }
-        if ($upstream_group = "new-frontend") {
-            proxy_pass http://new-frontend;
-            break;
-        }
-        proxy_pass http://$appversion;
+        proxy_set_header Host $http_host;
+        proxy_pass http://new-frontend;
     }
 
     location /groups/ {
