Use --force in 'docker image prune'

--- a/roles/echaloasuerte-3/tasks/main.yml
+++ b/roles/echaloasuerte-3/tasks/main.yml
@@ -125,7 +125,7 @@
 #    builder_cache: yes
 
 - name: Prune docker images
-  command: docker image prune
+  command: docker image prune -f
   become: yes
 
 - name: Prune stopped containers
