Revert "Implement HA on eas3, with 2 docker containers"
This reverts commit 6e3598c227f2e5241d89ba0688b7f3883f1ad3a4.

--- a/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
@@ -3,11 +3,6 @@ upstream backend-{{ echaloasuerte_3_app_name }}  {
 {% endfor %}
 }
 
-upstream frontend-{{ echaloasuerte_3_app_name }}  {
-    server localhost:8081;
-    server localhost:8082;
-}
-
 server {
     listen 80;
     server_name {% for item in echaloasuerte_3_domains %} {{ item }} {% endfor %};
@@ -29,6 +24,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
         proxy_redirect off;
-        proxy_pass http://frontend-{{ echaloasuerte_3_app_name }};
+        proxy_pass http://localhost:8081;
     }
 }
