Redirect urls for group draws

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -36,6 +36,9 @@ server {
     listen 80;
     server_name {% for item in FQDN %} {{ item }} dev.{{ item }} www.{{ item }}{% endfor %};
 
+    rewrite ^/draw/new/groups/?$ /groups permanent;
+    rewrite ^/draw/new/groups/shared/?$ /groups/public permanent;
+
     location /static/ {
         root      {{ echaloasuerte_root }};
         try_files $uri @node;
@@ -59,17 +62,14 @@ server {
         proxy_pass http://old-backend-frontend;
     }
 
-    location /draw/new/groups/ {
+    location /groups/ {
         proxy_set_header Host $http_host;
         proxy_pass http://new-frontend;
     }
 
-    location /groups/ {
-        try_files $uri @node;
-    }
-
     location /privacy-policy {
-        try_files $uri @node;
+        proxy_set_header Host $http_host;
+        proxy_pass http://new-frontend;
     }
 
     location /api {
