--- a/roles/monitoring/tasks/main.yml
+++ b/roles/monitoring/tasks/main.yml
@@ -1,6 +1,7 @@
 ---
 - set_fact:
     monit_version: "5.20.0"
+    filebeat_version: "6.x"
 
 - name: Fetch monit binary
   unarchive:
@@ -77,3 +78,45 @@
     state: started
     enabled: yes
 
+
+# ELK, basic install from https://github.com/geerlingguy/ansible-role-filebeat/
+- name: Ensure dependency is installed (Ubuntu).
+  apt:
+    name: apt-transport-https
+    state: present
+
+- name: Add Elasticsearch apt key.
+  apt_key:
+    url: https://artifacts.elastic.co/GPG-KEY-elasticsearch
+    id: 46095ACC8548582C1A2699A9D27D666CD88E42B4
+    state: present
+
+- name: Add Filebeat repository.
+  apt_repository:
+    repo: 'deb https://artifacts.elastic.co/packages/{{ filebeat_version }}/apt stable main'
+    state: present
+    update_cache: true
+
+- name: Install Filebeat.
+  package:
+    name: filebeat
+    state: present
+
+- name: Ensure Filebeat is started and enabled at boot.
+  service:
+    name: filebeat
+    state: started
+    enabled: true
+
+- name: Get logzio certificate
+  get_url:
+    url: https://raw.githubusercontent.com/logzio/public-certificates/master/COMODORSADomainValidationSecureServerCA.crt
+    dest: /etc/filebeat/COMODORSADomainValidationSecureServerCA.crt
+    mode: 0664
+
+- name: Set filebeat config file
+  template:
+    src: filebeat.yml
+    dest: "/etc/filebeat/filebeat.yml"
+  notify:
+  - restart filebeat
