--- a/roles/monitoring/templates/filebeat.yml
+++ b/roles/monitoring/templates/filebeat.yml
@@ -15,6 +15,17 @@ filebeat.inputs:
   ignore_older: 3h
 - type: log
   paths:
+    - /var/log/echaloasuerte-3/access.log
+  fields:
+    logzio_codec: plain
+    token: {{ logzio_token }}
+    type: echaloasuerte-3-nodejs-access
+    env: {{ filebeat_env }}
+  fields_under_root: true
+  encoding: utf-8
+  ignore_older: 3h
+- type: log
+  paths:
     - /var/log/echaloasuerte-3/echaloasuerte-uwsgi*.log
   fields:
     logzio_codec: plain
