Add metricbeat input to logz.io

--- a/roles/monitoring/handlers/main.yml
+++ b/roles/monitoring/handlers/main.yml
@@ -8,3 +8,8 @@
   service:
     name: filebeat
     state: restarted
+
+- name: restart metricbeat
+  service:
+    name: metricbeat
+    state: restarted
