Start A/B testing on the coin draw, 10%

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -26,7 +26,7 @@ server {
 }
 
 
-map $cookie_split_test_version $upstream_group {
+map $cookie_coin_split_test_version $upstream_group {
     default $appversion;
     "old-backend-frontend" "old-backend-frontend";
     "new-frontend" "new-frontend";
@@ -65,6 +65,21 @@ server {
     location /groups/ {
         proxy_set_header Host $http_host;
         proxy_pass http://new-frontend;
+    }
+
+    location /draw/new/coin/ {
+        add_header Set-Cookie "coing_split_test_version=$upstream_group;Path=/;Max-Age=518400;";
+        proxy_set_header Host $host;
+
+        if ($upstream_group = "old-backend-frontend") {
+            proxy_pass http://old-backend-frontend;
+            break;
+        }
+        if ($upstream_group = "new-frontend") {
+            proxy_pass http://new-frontend;
+            break;
+        }
+        proxy_pass http://$appversion;
     }
 
     location /privacy-policy {
