--- a/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
@@ -15,3 +15,4 @@ vacuum = true
 
 env = DJANGO_SETTINGS_MODULE={{ echaloasuerte_3_app_settings }}
 env = SENTRY_DSN={{ sentry_dsn }}
+env = ECHALOASUERTE_LOGS_PATH={{ echaloasuerte_3_logs }}
