Limit size of eas uwsgi logs to 50 MB
Partially fixes #85

--- a/roles/echaloasuerte/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte/templates/echaloasuerte-uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 plugins-dir = {{ uwsgi_plugins_dir }}
-plugin = python27
+plugin = python27, logfile
 chdir = {{ echaloasuerte_app }}
 home = {{ echaloasuerte_venv }}
 wsgi-file = echaloasuerte.wsgi
@@ -9,6 +9,6 @@ master = true
 processes = 5
 
 socket = {{ echaloasuerte_root }}/echaloasuerte-uwsgi{{ item }}.sock
-logto = {{ echaloasuerte_logs }}/echaloasuerte-uwsgi{{ item }}.log
+logger = file:logfile={{ echaloasuerte_logs }}/echaloasuerte-uwsgi{{ item }}.log,maxsize=50000000
 chmod-socket = 664
 vacuum = true
