--- a/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
@@ -1,6 +1,6 @@
 [uwsgi]
 plugins-dir = {{ uwsgi_plugins_dir }}
-plugin = python36
+plugin = python36, logfile
 chdir = {{ echaloasuerte_3_app }}
 home = {{ echaloasuerte_3_venv }}
 wsgi-file = {{ echaloasuerte_3_app_wsgi }}
@@ -9,7 +9,7 @@ master = true
 processes = 5
 
 socket = {{ echaloasuerte_3_root }}/echaloasuerte-uwsgi{{ item }}.sock
-logto = {{ echaloasuerte_3_logs }}/echaloasuerte-uwsgi{{ item }}.log
+logger = file:logfile={{ echaloasuerte_3_logs }}/echaloasuerte-uwsgi{{ item }}.log,maxsize=50000000
 chmod-socket = 664
 vacuum = true
 
