Split uwsgi requests errors from the rest
Consider the rest as errors, we probably need to filter
some out somehow.

--- a/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
@@ -9,7 +9,8 @@ master = true
 processes = 5
 
 socket = {{ echaloasuerte_3_root }}/echaloasuerte-uwsgi{{ item }}.sock
-logger = file:logfile={{ echaloasuerte_3_logs }}/echaloasuerte-uwsgi{{ item }}.log,maxsize=50000000
+req-logger = file:logfile={{ echaloasuerte_3_logs }}/echaloasuerte-uwsgi{{ item }}-req.log,maxsize=50000000
+logger = file:logfile={{ echaloasuerte_3_logs }}/echaloasuerte-uwsgi{{ item }}-err.log,maxsize=50000000
 chmod-socket = 664
 vacuum = true
 
