--- a/roles/echaloasuerte/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte/templates/echaloasuerte-uwsgi.ini
@@ -9,6 +9,8 @@ master = true
 processes = 5
 
 socket = {{ echaloasuerte_root }}/echaloasuerte-uwsgi{{ item }}.sock
-logger = file:logfile={{ echaloasuerte_logs }}/echaloasuerte-uwsgi{{ item }}.log,maxsize=50000000
+req-logger = file:logfile={{ echaloasuerte_logs }}/echaloasuerte-uwsgi{{ item }}-req.log,maxsize=50000000
+logger = file:logfile={{ echaloasuerte_logs }}/echaloasuerte-uwsgi{{ item }}-err.log,maxsize=50000000
+
 chmod-socket = 664
 vacuum = true
