uwsgi: Increase buffer size to 20kb

--- a/roles/echaloasuerte/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte/templates/echaloasuerte-uwsgi.ini
@@ -8,6 +8,8 @@ wsgi-file = echaloasuerte.wsgi
 master = true
 processes = 5
 
+buffer-size = 20480
+
 socket = {{ echaloasuerte_root }}/echaloasuerte-uwsgi{{ item }}.sock
 req-logger = file:logfile={{ echaloasuerte_logs }}/echaloasuerte-uwsgi{{ item }}-req.log,maxsize=50000000
 logger = file:logfile={{ echaloasuerte_logs }}/echaloasuerte-uwsgi{{ item }}-err.log,maxsize=50000000
