--- a/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-uwsgi.ini
@@ -8,6 +8,8 @@ wsgi-file = {{ echaloasuerte_3_app_wsgi }}
 master = true
 processes = 5
 
+buffer-size = 20480
+
 socket = {{ echaloasuerte_3_root }}/echaloasuerte-uwsgi{{ item }}.sock
 req-logger = file:logfile={{ echaloasuerte_3_logs }}/echaloasuerte-uwsgi{{ item }}-req.log,maxsize=50000000
 logger = file:logfile={{ echaloasuerte_3_logs }}/echaloasuerte-uwsgi{{ item }}-err.log,maxsize=50000000
