--- a/roles/monitoring/templates/filebeat.yml
+++ b/roles/monitoring/templates/filebeat.yml
@@ -2,17 +2,7 @@
 
 filebeat.inputs:
 
-- type: log
-  paths:
-    - /var/log/mongodb/mongod.log
-  fields:
-    logzio_codec: plain
-    token: {{ logzio_token }}
-    type: mongodb
-    env: {{ filebeat_env }}
-  fields_under_root: true
-  encoding: utf-8
-  ignore_older: 3h
+# EAS3 frontend logs
 - type: log
   paths:
     - /var/log/echaloasuerte-3/access.log
@@ -36,6 +26,7 @@ filebeat.inputs:
   encoding: utf-8
   ignore_older: 3h
 
+# EAS3 uwsgi logs
 - type: log
   paths:
     - /var/log/echaloasuerte-3/echaloasuerte-uwsgi*-req.log
@@ -61,6 +52,7 @@ filebeat.inputs:
   encoding: utf-8
   ignore_older: 3h
 
+# EAS2 uwsgi logs
 - type: log
   paths:
     - /var/log/echaloasuerte/echaloasuerte-uwsgi*-req.log
@@ -86,6 +78,7 @@ filebeat.inputs:
   encoding: utf-8
   ignore_older: 3h
 
+# PostreSQL database logs
 - type: log
   paths:
     - /var/log/postgresql/postgresql-*-main.log
@@ -97,6 +90,21 @@ filebeat.inputs:
   fields_under_root: true
   encoding: utf-8
   ignore_older: 3h
+
+# MongoDB database logs
+- type: log
+  paths:
+    - /var/log/mongodb/mongod.log
+  fields:
+    logzio_codec: plain
+    token: {{ logzio_token }}
+    type: mongodb
+    env: {{ filebeat_env }}
+  fields_under_root: true
+  encoding: utf-8
+  ignore_older: 3h
+
+# Nginx logs
 - type: log
   paths:
     - /var/log/nginx/access.log
@@ -119,6 +127,8 @@ filebeat.inputs:
   fields_under_root: true
   encoding: utf-8
   ignore_older: 3h
+
+# EAS2 django logs
 - type: log
   paths:
     - /var/log/echaloasuerte/echaloasuerte_debug.txt
@@ -167,6 +177,8 @@ filebeat.inputs:
   fields_under_root: true
   encoding: utf-8
   ignore_older: 3h
+
+# Fail2ban logs
 - type: log
   paths:
     - /var/log/fail2ban.log
@@ -178,6 +190,8 @@ filebeat.inputs:
   fields_under_root: true
   encoding: utf-8
   ignore_older: 3h
+
+# Uwsgi emperor logs
 - type: log
   paths:
     - /var/log/uwsgi*.log
