Monitoring: set level of nginx-error log to error

--- a/roles/monitoring/templates/filebeat.yml
+++ b/roles/monitoring/templates/filebeat.yml
@@ -124,6 +124,7 @@ filebeat.inputs:
     token: {{ logzio_token }}
     type: nginx-error
     env: {{ filebeat_env }}
+    level: error
   fields_under_root: true
   encoding: utf-8
   ignore_older: 3h
