Add redirect from /draw/new/coin to /coin

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -31,6 +31,7 @@ server {
 
     rewrite ^/draw/new/groups/?$ /groups permanent;
     rewrite ^/draw/new/groups/shared/?$ /groups/public permanent;
+    rewrite ^/draw/new/coin/?$ /coin permanent;
 
     location /static/ {
         root      {{ echaloasuerte_root }};
@@ -60,7 +61,7 @@ server {
         proxy_pass http://new-frontend;
     }
 
-    location /draw/new/coin/ {
+    location /coin/ {
         proxy_set_header Host $http_host;
         proxy_pass http://new-frontend;
     }
