Send 10% traffic to arrow in eas3

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -12,8 +12,14 @@ upstream new-frontend {
 }
 
 split_clients app"${remote_addr}${http_user_agent}${date_gmt}" $appversion {
-    50%     old-backend-frontend;
+    90%     old-backend-frontend;
     *       new-frontend;
+}
+
+map $cookie_spinner_split_test_version $upstream_group {
+    default $appversion;
+    "old-backend-frontend" "old-backend-frontend";
+    "new-frontend" "new-frontend";
 }
 
 server {
@@ -64,6 +70,21 @@ server {
     location /coin/ {
         proxy_set_header Host $http_host;
         proxy_pass http://new-frontend;
+    }
+
+    location /draw/new/spinner/ {
+        add_header Set-Cookie "spinner_split_test_version=$upstream_group;Path=/;Max-Age=518400;";
+        proxy_set_header Host $host;
+
+        if ($upstream_group = "old-backend-frontend") {
+            proxy_pass http://old-backend-frontend;
+            break;
+        }
+        if ($upstream_group = "new-frontend") {
+            proxy_pass http://new-frontend;
+            break;
+        }
+        proxy_pass http://$appversion;
     }
 
     location /privacy-policy {
