--- a/roles/echaloasuerte-3/tasks/main.yml
+++ b/roles/echaloasuerte-3/tasks/main.yml
@@ -86,6 +86,7 @@
 - name: Init a new swarm with default parameters
   docker_swarm:
     state: present
+  become: yes
 
 - name: Start eas service in docker swarm
   docker_swarm_service:
@@ -111,6 +112,7 @@
     - mode: host
       published_port: 8081
       target_port: 80
+  become: yes
   tags:
   - cd-frontend
 
