Reintroduce docker pull task

--- a/roles/echaloasuerte-3/tasks/main.yml
+++ b/roles/echaloasuerte-3/tasks/main.yml
@@ -88,6 +88,16 @@
     state: present
   become: yes
 
+- name: pull echaloasuerte image
+  docker_image:
+    name: etcaterva/echaloasuerte
+    tag: "{{ echaloasuerte_3_git_branch }}"
+    force: yes
+  become: yes
+  register: docker_pull
+  tags:
+  - cd-frontend
+
 - name: Start eas service in docker swarm
   docker_swarm_service:
     name: eas-service
