--- a/roles/echaloasuerte-3/tasks/main.yml
+++ b/roles/echaloasuerte-3/tasks/main.yml
@@ -103,6 +103,7 @@
     name: eas-service
     image: "etcaterva/echaloasuerte:{{ echaloasuerte_3_git_branch }}"
     resolve_image: yes
+    force_update: yes
     update_config:
       order: start-first
       parallelism: 2
