--- a/roles/echaloasuerte-3/tasks/main.yml
+++ b/roles/echaloasuerte-3/tasks/main.yml
@@ -120,7 +120,7 @@
       retries: 10
       start_period: 30s
     publish:
-    - mode: host
+    - mode: ingress
       published_port: 8081
       target_port: 80
   become: yes
