--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -16,12 +16,6 @@ split_clients app"${remote_addr}${http_user_agent}${date_gmt}" $appversion {
     *       new-frontend;
 }
 
-map $cookie_spinner_split_test_version $upstream_group {
-    default $appversion;
-    "old-backend-frontend" "old-backend-frontend";
-    "new-frontend" "new-frontend";
-}
-
 server {
     listen localhost:8080;
 
@@ -73,18 +67,8 @@ server {
     }
 
     location /draw/new/spinner/ {
-        add_header Set-Cookie "spinner_split_test_version=$upstream_group;Path=/;Max-Age=518400;";
-        proxy_set_header Host $host;
-
-        if ($upstream_group = "old-backend-frontend") {
-            proxy_pass http://old-backend-frontend;
-            break;
-        }
-        if ($upstream_group = "new-frontend") {
-            proxy_pass http://new-frontend;
-            break;
-        }
-        proxy_pass http://$appversion;
+        proxy_set_header Host $http_host;
+        proxy_pass http://new-frontend;
     }
 
     location /privacy-policy {
