Add redirect for new spinner url

--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -32,6 +32,7 @@ server {
     rewrite ^/draw/new/groups/?$ /groups permanent;
     rewrite ^/draw/new/groups/shared/?$ /groups/public permanent;
     rewrite ^/draw/new/coin/?$ /coin permanent;
+    rewrite ^/draw/new/spinner/?$ /spinner permanent;
 
     location /static/ {
         root      {{ echaloasuerte_root }};
@@ -66,7 +67,7 @@ server {
         proxy_pass http://new-frontend;
     }
 
-    location /draw/new/spinner/ {
+    location /spinner/ {
         proxy_set_header Host $http_host;
         proxy_pass http://new-frontend;
     }
