Recover logs in swarm deployment

--- a/roles/echaloasuerte-3/tasks/main.yml
+++ b/roles/echaloasuerte-3/tasks/main.yml
@@ -123,6 +123,10 @@
     - mode: ingress
       published_port: 8081
       target_port: 80
+    mounts:
+      - source: "{{ echaloasuerte_3_logs }}"
+        target: /var/log/eas3/
+        type: bind
   become: yes
   tags:
   - cd-frontend
