--- a/roles/echaloasuerte-3/tasks/main.yml
+++ b/roles/echaloasuerte-3/tasks/main.yml
@@ -119,6 +119,9 @@
       timeout: 10s
       retries: 10
       start_period: 30s
+    replicas: 1
+    env:
+      LOG_NUMBER: "{{'{{.Task.Slot}}'}}"
     publish:
     - mode: ingress
       published_port: 8081
