--- a/roles/monitoring/templates/filebeat.yml
+++ b/roles/monitoring/templates/filebeat.yml
@@ -5,7 +5,7 @@ filebeat.inputs:
 # EAS3 frontend logs
 - type: log
   paths:
-    - /var/log/echaloasuerte-3/access.log
+    - /var/log/echaloasuerte-3/access*.log
   fields:
     logzio_codec: plain
     token: {{ logzio_token }}
@@ -16,7 +16,7 @@ filebeat.inputs:
   ignore_older: 3h
 - type: log
   paths:
-    - /var/log/echaloasuerte-3/combined.log
+    - /var/log/echaloasuerte-3/combined*.log
   fields:
     logzio_codec: json
     token: {{ logzio_token }}
