--- a/roles/echaloasuerte-3/tasks/main.yml
+++ b/roles/echaloasuerte-3/tasks/main.yml
@@ -121,7 +121,7 @@
       start_period: 30s
     replicas: "{{ echaloasuerte_3_replicas }}"
     env:
-      LOG_NUMBER: "{{'{{.Task.Slot}}'}}"
+      LOGS_SUFFIX: "{{'{{.Task.Slot}}'}}"
     publish:
     - mode: ingress
       published_port: 8081
