--- a/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte/templates/echaloasuerte-nginx.conf
@@ -16,6 +16,12 @@ split_clients app"${remote_addr}${http_user_agent}${date_gmt}" $appversion {
     *       new-frontend;
 }
 
+map $cookie_raffle_split_test_version $upstream_group {
+    default $appversion;
+    "old-backend-frontend" "old-backend-frontend";
+    "new-frontend" "new-frontend";
+}
+
 server {
     listen localhost:8080;
 
@@ -70,6 +76,21 @@ server {
     location /spinner/ {
         proxy_set_header Host $http_host;
         proxy_pass http://new-frontend;
+    }
+
+    location /draw/new/raffle/ {
+        add_header Set-Cookie "raffle_split_test_version=$upstream_group;Path=/;Max-Age=518400;";
+        proxy_set_header Host $host;
+
+        if ($upstream_group = "old-backend-frontend") {
+            proxy_pass http://old-backend-frontend;
+            break;
+        }
+        if ($upstream_group = "new-frontend") {
+            proxy_pass http://new-frontend;
+            break;
+        }
+        proxy_pass http://$appversion;
     }
 
     location /privacy-policy {
