--- a/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
+++ b/roles/echaloasuerte-3/templates/echaloasuerte-nginx.conf
@@ -17,7 +17,7 @@ server {
     }
 
     location / {
-        try_files $uri @node;
+        try_files $uri $uri/ /index.html;
     }
 
     location @node {
