--- a/roles/echaloasuerte-3/tasks/main.yml
+++ b/roles/echaloasuerte-3/tasks/main.yml
@@ -92,7 +92,8 @@
   docker_image:
     name: etcaterva/echaloasuerte
     tag: "{{ echaloasuerte_3_git_branch }}"
-    force: yes
+    source: pull
+    force_source: yes
   become: yes
   register: docker_pull
   tags:
