echaloasuerte-3: limit memory consumption of each replica to 300M
If it uses more memory than that, container will be killed.

--- a/roles/echaloasuerte-3/tasks/main.yml
+++ b/roles/echaloasuerte-3/tasks/main.yml
@@ -121,6 +121,8 @@
       retries: 10
       start_period: 30s
     replicas: "{{ echaloasuerte_3_replicas }}"
+    limits:
+      memory: 300M
     env:
       LOGS_SUFFIX: "{{'{{.Task.Slot}}_{{.Task.ID}}'}}"
     publish:
