--- a/roles/monitoring/templates/metricbeat.yml
+++ b/roles/monitoring/templates/metricbeat.yml
@@ -5,6 +5,20 @@ metricbeat.modules:
   period: 15s
   processes: ['.*']
 
+- module: docker
+  metricsets:
+    - "container"
+    - "cpu"
+    - "diskio"
+    - "event"
+    - "healthcheck"
+    - "info"
+    - "memory"
+    - "network"
+  hosts: ["unix:///var/run/docker.sock"]
+  period: 10s
+  enabled: true
+
 fields:
   logzio_codec: json
   token: {{ logzio_token }}
